done split, reduce

--- a/SS3/index.html
+++ b/SS3/index.html
@@ -10,8 +10,10 @@
 
 <body>
 
-  <h1 id="demo">Hello Wordl</h1>
-  <h1 class="chao">hi</h1>
+  <!-- <h1 id="demo">Hello Wordl</h1>
+  <h1 class="chao">hi</h1> -->
+
+  <div id="demo"></div>
 
 
   <script src="./app.js"></script>
