--- a/SS8/routes/register.html
+++ b/SS8/routes/register.html
@@ -38,7 +38,7 @@
       <div class="w-100" id="btn-container">
         <button type="submit" class="btn btn-primary w-100">Sign Up</button>
       </div>
-      <p class="mt-2">Already have an account?<a href="#/login"></a></p>
+      <p class="mt-2">Already have an account?<a href="#/login">Login</a></p>
     </form>
   </div>
 </div>
