--- a/SS8/routes/register.html
+++ b/SS8/routes/register.html
@@ -42,3 +42,50 @@
     </form>
   </div>
 </div>
+
+<script type="module">
+  import {
+    createUserWithEmailAndPassword,
+    updateProfile,
+    signOut,
+    sendEmailVerification,
+  } from "https://www.gstatic.com/firebasejs/9.13.0/firebase-auth.js";
+  import { auth } from "../firebase.js"
+
+  const form = document.querySelector("form");
+  form.addEventListener("submit", (e) => {
+    e.preventDefault();
+
+    const username = form.username.value.trim();
+    const email = form.email.value.trim();
+    const password = form.password.value;
+
+    createUserWithEmailAndPassword(auth, email, password)
+      .then(async (userCredential) => {
+        const user = userCredential.user;
+        console.log(user);
+
+        await sendEmailVerification(user);
+
+        await updateProfile(auth.currentUser, {
+          displayName: username,
+          // photoURL: 'null'
+        })
+
+        await signOut(auth);
+        alert("Please verify your email");
+        location.hash = "#/login"
+      })
+      .catch((error) => {
+        const errorCode = error.code;
+        const errorMessage = error.message;
+        console.log(errorCode, errorMessage);
+        alert(errorCode);
+      })
+      .finally(() => {
+        document.querySelector("#btn-container").innerHTML = `
+        <button class="btn btn-primary w-100" type="submit">Sign Up</button>
+        `
+      })
+  })
+</script>
