--- a/SS8/routes/register.html
+++ b/SS8/routes/register.html
@@ -7,38 +7,34 @@
     </div>
 
     <form class="auth-content">
-      <img src="../assets/avatar.png" alt="" />
+      <img src="./assets/avatar.png" alt="" />
 
-      <!-- username -->
       <div class="input-group mb-3">
         <span class="input-group-text" id="basic-addon1">
-          <!-- lát nhúng icon -->
-          <i>icon</i>
+          <i class="bx bxs-user"></i>
         </span>
-        <input type="text" required class="form-control" placeholder="Username" aria-label="Username"
+        <input required type="text" class="form-control" placeholder="Username" aria-label="Username"
           aria-describedby="basic-addon1" id="username" name="username" />
       </div>
 
-      <!-- email -->
       <div class="input-group mb-3">
-        <span class="input-group-text" id="basic-addon1"> @ </span>
-        <input type="text" required class="form-control" placeholder="Email" aria-label="Email"
+        <span class="input-group-text" id="basic-addon1">@</span>
+        <input required type="email" class="form-control" placeholder="Email" aria-label="Email"
           aria-describedby="basic-addon1" id="email" name="email" />
       </div>
 
-      <!-- Password -->
       <div class="input-group mb-3">
         <span class="input-group-text" id="basic-addon2">
-          <!-- lát nhúng icon khóa -->
-          <i>icon</i>
+          <i class="bx bxs-lock-alt"></i>
         </span>
-        <input type="password" minlength="6" maxlength="18" required class="form-control" placeholder="Password"
+        <input minlength="6" maxlength="18" required type="password" class="form-control" placeholder="Password"
           aria-label="Password" aria-describedby="basic-addon2" id="password" name="password" />
       </div>
       <div class="w-100" id="btn-container">
-        <button type="submit" class="btn btn-primary w-100">Sign Up</button>
+        <button class="btn btn-primary w-100" type="submit">Sign Up</button>
       </div>
-      <p class="mt-2">Already have an account?<a href="#/login">Login</a></p>
+
+      <p class="mt-2">Haven't got an account? <a href="#/login">Login</a></p>
     </form>
   </div>
 </div>
@@ -49,17 +45,27 @@
     updateProfile,
     signOut,
     sendEmailVerification,
-  } from "https://www.gstatic.com/firebasejs/9.13.0/firebase-auth.js";
-  import { auth } from "../firebase.js"
+  } from "https://www.gstatic.com/firebasejs/9.12.1/firebase-auth.js";
+  import { auth } from "../firebase.js";
 
   const form = document.querySelector("form");
-  form.addEventListener("submit", (e) => {
-    e.preventDefault();
+  form.addEventListener("submit", (event) => {
+    event.preventDefault();
+
+    document.querySelector("#btn-container").innerHTML =
+      `
+    <button class="btn btn-primary w-100" type="button" disable>
+      <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+      <span>Sign Up... </span>
+    </button>
+    `
 
     const username = form.username.value.trim();
     const email = form.email.value.trim();
     const password = form.password.value;
 
+
+    //// Xử lý với firebase authentication
     createUserWithEmailAndPassword(auth, email, password)
       .then(async (userCredential) => {
         const user = userCredential.user;
@@ -69,12 +75,16 @@
 
         await updateProfile(auth.currentUser, {
           displayName: username,
-          // photoURL: 'null'
-        })
+          photoURL: `https://avatars.dicebear.com/api/initials/${encodeURIComponent(
+            username
+          )}.svg`,
+        });
 
         await signOut(auth);
+
         alert("Please verify your email");
-        location.hash = "#/login"
+
+        location.hash = "#/login";
       })
       .catch((error) => {
         const errorCode = error.code;
@@ -83,9 +93,11 @@
         alert(errorCode);
       })
       .finally(() => {
-        document.querySelector("#btn-container").innerHTML = `
+        document.querySelector("#btn-container").innerHTML =
+          `
         <button class="btn btn-primary w-100" type="submit">Sign Up</button>
         `
       })
   })
+
 </script>
